--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h2 style="color:rgb(253, 160, 175);">About Me</h2>
                 <div class="about-grid">
                     <p class="about-story">
-                        Currently pursuing a B.Tech degree in Computer Science with IoT as a specialization at Vellore Institute of Technology.
+                        Currently pursuing a B.Tech degree in Computer Science with IoT as a specialization at Vellore Institute of Technology. Currently focused on frontend and full-stack development, while exploring how AI can enhance modern applications. I learn best by building projects and solving real problems.
                     </p>
                     <div class="about-details">
                         <p><strong>Location:</strong> Haridwar, India</p>
@@ -112,4 +112,5 @@
     </footer>
 
 </body>
+
 </html>
