--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id="navbar">
         <div class="container nav-content">
-            <a href="#hero" class="logo">To be decided</a>
+            <a href="#hero" class="logo"> </a>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -45,7 +45,7 @@
                     </p>
                     <div class="about-details">
                         <p><strong>Location:</strong> Haridwar, India</p>
-                        <p><strong>Focus:</strong> Full Stack Development</p>
+                        <p><strong>Focus:</strong> Full Stack Development, AI driven softwares</p>
                         <div class="box">
                            <img src="images/profile.jpeg" alt="Center Image">
                         </div>
@@ -62,9 +62,11 @@
                     <div class="skill-card">HTML & CSS</div>
                     <div class="skill-card">JavaScript</div>
                     <div class="skill-card">Python</div>
-                    <div class="skill-card">Git/GitHub</div>
+                    <div class="skill-card">Java</div>
+                    <div class="skill-card">Next js</div>
                     <div class="skill-card">React js</div>
                     <div class="skill-card">SQL Databases</div>
+                    <div class="skill-card">Git/GitHub</div>
                     </div>
             </div>
         </section>
@@ -114,3 +116,4 @@
 </body>
 
 </html>
+
